Uncommented runtime line in buildconfig + added JS parameters in index view

--- a/grails-app/i18n/chat.properties
+++ b/grails-app/i18n/chat.properties
@@ -6,8 +6,8 @@ be.arexo.chat.index.login-button = Join the chat
 
 #messages view
 be.arexo.chat.messages.title = List of the messages
-be.arexo.chat.messages.th1 = Message
-be.arexo.chat.messages.th2 = Sent by
+be.arexo.chat.messages.list.message = Message
+be.arexo.chat.messages.list.user = Sent by
 
 #common
 be.arexo.chat.h1title = Arexo's chat
