Send view + added send in controller Message + updated i18n

--- a/grails-app/i18n/chat.properties
+++ b/grails-app/i18n/chat.properties
@@ -1,13 +1,18 @@
 #index view
 be.arexo.chat.index.title = Join the chat !
-be.arexo.chat.h1title = Arexo's chat
 be.arexo.chat.index.indication = Please enter your user-name
 be.arexo.chat.index.login-button = Join the chat
 
 #messages view
 be.arexo.chat.messages.title = List of the messages
+be.arexo.chat.messages.connectedas = Connected as : 
 be.arexo.chat.messages.list.message = Message
 be.arexo.chat.messages.list.user = Sent by
 
 #common
 be.arexo.chat.h1title = Arexo's chat
+
+#send view
+message.send.title = Send a message
+message.send.indication = Type your message here 
+message.send.send-button = send !
