added form in message.gsp

--- a/grails-app/i18n/chat.properties
+++ b/grails-app/i18n/chat.properties
@@ -8,6 +8,7 @@ be.arexo.chat.messages.title = List of the messages
 be.arexo.chat.messages.connectedas = Connected as : 
 be.arexo.chat.messages.list.message = Message
 be.arexo.chat.messages.list.user = Sent by
+be.arexo.chat.messages.send-button = Send message
 
 #common
 be.arexo.chat.h1title = Arexo's chat
