--- a/grails-app/i18n/chat.properties
+++ b/grails-app/i18n/chat.properties
@@ -9,6 +9,7 @@ be.arexo.chat.messages.connectedas = Connected as :
 be.arexo.chat.messages.list.message = Message
 be.arexo.chat.messages.list.user = Sent by
 be.arexo.chat.messages.send-button = Send message
+be.arexo.chat.messages.send-button = Disconnection
 
 #common
 be.arexo.chat.h1title = Arexo's chat
